# BatteryGuardian

./: README.md  battery-guardian.py  deploy.sh  install_dependencies.py  main.sh  pyproject.toml  requirements.txt  upower_test.py
.github/: copilot-instructions.md  copilot-instructions.md.bak
batteryguardian/: main.py
batteryguardian/modules/: acpid.py  battery.py  brightness.py  fast_power_monitor.py  log.py  notification.py  upower.py  upower_impl.py  utils.py
configs/: defaults.sh
scripts/: batteryguardian.service
src/: __init__.py  battery-guardian.sh  battery_guardian.sh  main.py  main.sh
src/modules/: __init__.py  battery.sh  brightness.py  brightness.sh  config.py  config.sh  log.sh  notification.sh  upower.py  utils.py  utils.sh
tests/: adaptive_polling.bats  battery_guardian.bats  battery_module.bats  brightness_module.bats  config_module.bats  log_module.bats  main_test.bats  mock_dbus.py  monitoring.bats  notification_module.bats  notification_test.bats  setup_bats_helpers.sh  test_acpid_module.py  test_battery_guardian.py  test_fast_power_monitor.py  test_monitoring.py  test_sysfs_monitor.py  test_upower.py  test_upower_module.py  utils_module.bats
tests/tmp/xdg_config_home/battery-guardian/: config.sh
tests/tmp/xdg_state_home/battery-guardian/notifications/: general_timestamp
